--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,12 @@ dependencies:
   country_picker: ^2.0.25
   cupertino_icons: ^1.0.8
   flutter_launcher_icons: ^0.14.3
+  http: ^1.3.0
+  shared_preferences: ^2.5.2
+  flutter_secure_storage: ^9.2.4
+  url_launcher: ^6.3.1
+  webview_flutter: ^4.10.0
+  flutter_web_auth_2: ^4.1.0
  
 dev_dependencies:
   flutter_test:
