--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,22 +6,22 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # 1. Checkout code (using latest version)
+      # 1. Checkout code
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # 2. Setup Java (essential for Android builds)
+      # 2. Setup Java
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
           java-version: '17'
           distribution: 'temurin'
 
-      # 3. Setup Flutter with matching Dart SDK
+      # 3. Setup Flutter
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: "3.29.2"  # Verified working version
+          flutter-version: "3.29.2"
           channel: 'stable'
 
       # 4. Verify environment
@@ -34,17 +34,24 @@ jobs:
           flutter pub get
           flutter pub cache repair
 
-      # 6. Generate assets
+      # 6. Generate assets (with error handling)
       - name: Generate icons and splash
         run: |
-          flutter pub run flutter_launcher_icons:main
-          flutter pub run flutter_native_splash:create
+          # Generate launcher icons
+          flutter pub run flutter_launcher_icons
+          
+          # Generate splash screen only if package exists
+          if grep -q "flutter_native_splash" pubspec.yaml; then
+            flutter pub run flutter_native_splash:create
+          else
+            echo "flutter_native_splash not found in pubspec.yaml, skipping splash screen generation"
+          fi
 
-      # 7. Build release APK (optimized)
+      # 7. Build release APK
       - name: Build release APK
         run: flutter build apk --release --no-tree-shake-icons
 
-      # 8. Rename and upload APK
+      # 8. Upload APK
       - name: Upload APK artifact
         uses: actions/upload-artifact@v4
         with:
