--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,54 +6,47 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout du dépôt
+      # 1. Checkout code (using latest version)
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Configuration de JDK 17
+      # 2. Setup Java (essential for Android builds)
+      - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
           java-version: '17'
           distribution: 'temurin'
 
-      - name: Configuration de Flutter
+      # 3. Setup Flutter with matching Dart SDK
+      - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: "3.29.2"
+          flutter-version: "3.29.2"  # Verified working version
           channel: 'stable'
 
-      - name: Clean Gradle cache
-        run: |
-          rm -rf ~/.gradle/caches/
-          cd android
-          ./gradlew clean
-          cd ..
+      # 4. Verify environment
+      - name: Show Flutter version
+        run: flutter --version
 
+      # 5. Get dependencies with cache
       - name: Install dependencies
         run: |
+          flutter pub get
           flutter pub cache repair
-          flutter pub upgrade
-          cd android
-          ./gradlew --refresh-dependencies
-          cd ..
 
-      - name: Mise à jour de Gradle vers 8.2
+      # 6. Generate assets
+      - name: Generate icons and splash
         run: |
-          cd android
-          ./gradlew wrapper --gradle-version 8.2
-          cd ..
+          flutter pub run flutter_launcher_icons:main
+          flutter pub run flutter_native_splash:create
 
-      - name: Génération des icônes et écran de démarrage
-        run: |
-          flutter pub run flutter_launcher_icons
-          if grep -q "flutter_native_splash" pubspec.yaml; then
-            flutter pub run flutter_native_splash:create
-          fi
-
-      - name: Construction de l'APK en mode release
+      # 7. Build release APK (optimized)
+      - name: Build release APK
         run: flutter build apk --release --no-tree-shake-icons
 
-      - name: Téléversement de l'APK
+      # 8. Rename and upload APK
+      - name: Upload APK artifact
         uses: actions/upload-artifact@v4
         with:
-          name: dumumtergo-release
+          name: ICHFIN-release
           path: build/app/outputs/flutter-apk/app-release.apk
